--- a/src/layouts/navi.scss
+++ b/src/layouts/navi.scss
@@ -1,3 +1,24 @@
 .navi {
   display: flex;
 }
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+nav ul li {
+  font-size: 16px;
+  padding: 15px 20px 18px;
+}
+
+nav ul a {
+  color: white;
+}
+
+.hightlight {
+  background-color: white;
+}
