--- a/src/layouts/navi.scss
+++ b/src/layouts/navi.scss
@@ -12,11 +12,16 @@ nav ul {
 
 nav ul li {
   font-size: 16px;
+  text-transform: uppercase;
+  font-weight: 100;
   padding: 15px 20px 18px;
 }
 
 nav ul a {
   color: white;
+}
+nav ul a:hover {
+  color: #f1c40f;
 }
 
 .hightlight {
